--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -2,3 +2,4 @@ PORT=4000
 DB_URI="mongodb://127.0.0.1:27017/Ecommerce"
 JWT_SECRET_KEY=DJKSDJKS5665DKSD/,.';';'SJDKJJLKIEEEKJDSJSDKSJDKS
 JWT_EXPIRE=2d
+COOKIE_EXPIRE=2
