--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -3,3 +3,6 @@ DB_URI="mongodb://127.0.0.1:27017/Ecommerce"
 JWT_SECRET_KEY=DJKSDJKS5665DKSD/,.';';'SJDKJJLKIEEEKJDSJSDKSJDKS
 JWT_EXPIRE=2d
 COOKIE_EXPIRE=2
+SMPT_SERVICE=gmail
+SMPT_MAIL=pawan.mukati@newtechfusion.com
+SMPT_PASSWORD=Pawan@5842
